--- a/vignettes/Trans2Kegg.Rmd
+++ b/vignettes/Trans2Kegg.Rmd
@@ -14,10 +14,18 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
+library(Trans2Kegg)
+library(Biostrings)
 ```
 
 ## Vignette Info
 
+```{r}
+transFile <- system.file("extdata", "transcriptSample.fa", package="Trans2Kegg")
+transIds <- c("rna3 gene=rfx6")
+library(Trans2Kegg)
+annotateTranscripts(transIds, transFile)
+```
 ## Styles
 
 ## Figures
