--- a/Trans2KEGG.tex
+++ b/Trans2KEGG.tex
@@ -129,7 +129,7 @@ Northeastern University
 Nahant, MA 01908  
 \end{flushright}
 
-October, 22, 2018
+October, 27, 2018
 
 Dear Editor
 
@@ -193,10 +193,10 @@ Running Title: Transcriptome-to-KEGG
 \subsubsection{Results}\label{results}}
 
 \hypertarget{discussion}{%
-\subsection{Discussion}\label{discussion}}
+\subsubsection{Discussion}\label{discussion}}
 
 \hypertarget{conclusion}{%
-\subsection{Conclusion}\label{conclusion}}
+\subsubsection{Conclusion}\label{conclusion}}
 
 \clearpage
 \singlespacing
