--- a/vignettes/Trans2Kegg.Rmd
+++ b/vignettes/Trans2Kegg.Rmd
@@ -32,8 +32,9 @@ head(annot)
 mergeAnnotations(outFile)
 ```
 
-Query the KEGG API to obtain pathway information, and produce a table of pathway to ortholog
-mappings (Table 4), and pathway ID to pathway detail mappings (Table 5).
+Query the KEGG API to obtain pathway information, and produce a table of
+pathway to ortholog mappings (Table 4), and pathway ID to pathway detail
+mappings (Table 5).
 
 ```{r}
 #getPathways(outFile)
